<resources>
    <string name="app_name">Football Highlights</string>
    <string name="menu_video">Videos</string>
    <string name="menu_news">News</string>
    <string name="menu_archive">Archive</string>

    <string name="team_title">TEAM</string>
    <string name="team_played">P</string>
    <string name="team_win">W</string>
    <string name="team_draw">D</string>
    <string name="team_loss">L</string>
    <string name="team_diff">GD</string>
    <string name="team_pts">PTS</string>

    <string name="scorer_name">PLAYER</string>
    <string name="scorer_country">COUNTRY</string>
    <string name="scorer_club">TEAM</string>
    <string name="scorer_goals">NOS</string>
</resources>
