<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_column="0"
            android:gravity="center"
            android:text="@string/team_title"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/matches"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_column="1"
            android:text="@string/team_played"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/win"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_column="2"
            android:text="@string/team_win"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/draw"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_column="3"
            android:text="@string/team_draw"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:paddingStart="5dp"/>

        <TextView
            android:id="@+id/loss"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_column="4"
            android:text="@string/team_loss"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:id="@+id/diff"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_column="5"
            android:text="@string/team_diff"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:paddingEnd="5dp"/>

        <TextView
            android:id="@+id/points"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_column="6"
            android:text="@string/team_pts"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            />

    </TableRow>

</TableLayout>