<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:stretchColumns="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/name"
            android:text="@string/scorer_name"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:textColor="@color/colorAccent"
            android:layout_column="1"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/country"
            android:text="@string/scorer_country"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_column="2"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/club"
            android:text="@string/scorer_club"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_column="3"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/goals"
            android:text="@string/scorer_goals"
            android:layout_width="wrap_content"
            android:layout_column="4"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textStyle="bold"/>

    </TableRow>

</TableLayout>